RANGER-5541: Implement best coding practices for validating service configs